ACG Phase/y.output
Terminals unused in grammar

   T_LIBRARY
   T_IN
   T_BY
   T_LENGTHOUT
   T_MOD
   T_MMOD
   T_COPEN
   T_SEQOPEN
   '<'
   '>'
   '='


Grammar

    0 $accept: Q $end

    1 Q: S

    2 S: WHILE S
    3  | IF S
    4  | REPEAT S
    5  | BREAK S
    6  | EXP S
    7  | T_PRINT '(' ITEM ')' T_NL S
    8  | T_CO N S T_CC T_NL S
    9  | error T_NL S
   10  | %empty

   11 $@1: %empty

   12 $@2: %empty

   13 $@3: %empty

   14 WHILE: T_WHILE N $@1 '(' N COND N ')' $@2 N T_CO N S T_CC $@3 T_NL

   15 $@4: %empty

   16 $@5: %empty

   17 REPEAT: T_REPEAT $@4 N T_CO N S T_CC $@5 T_NL

   18 $@6: %empty

   19 BREAK: T_BREAK $@6 T_NL

   20 $@7: %empty

   21 IF: T_IF N '(' N COND N ')' $@7 N T_CO NIF

   22 NIF: N S T_CC T_NL

   23 $@8: %empty

   24 NIF: N S T_CC T_NL $@8 E

   25 $@9: %empty

   26 $@10: %empty

   27 E: T_ELSE $@9 T_IF N '(' N COND N ')' $@10 N T_CO N S T_CC T_NL EIF

   28 $@11: %empty

   29 E: T_ELSE $@11 N T_CO N S T_CC T_NL

   30 EIF: E
   31    | %empty

   32 $@12: %empty

   33 EXP: K RELOP K $@12 T_NL

   34 $@13: %empty

   35 EXP: ID ASSIGNOP K $@13 T_NL
   36    | K T_NL

   37 COND: K RELOP K
   38     | ID ASSIGNOP K
   39     | K LOGICOP K
   40     | K

   41 @14: %empty

   42 K: K T_ADD @14 L

   43 @15: %empty

   44 K: K T_SUB @15 L
   45  | L

   46 @16: %empty

   47 L: L T_MUL @16 O

   48 @17: %empty

   49 L: L T_DIV @17 O
   50  | O

   51 O: ID
   52  | NUM
   53  | '(' K ')'
   54  | ID '[' INDEX ']'

   55 INDEX: NUM ',' INDEX
   56      | ID ',' INDEX
   57      | NUM
   58      | ID

   59 RELOP: T_LT
   60      | T_GT
   61      | T_EE
   62      | T_LE
   63      | T_GE
   64      | T_NE

   65 ASSIGNOP: T_EQ
   66         | T_LA
   67         | T_RA

   68 LOGICOP: T_AND
   69        | T_OR

   70 ITEM: NUM
   71     | BOOL
   72     | STR
   73     | PASTE
   74     | ID

   75 PASTE: T_PASTEO '(' PASTEIN ')'

   76 PASTEIN: STR ',' PASTEIN
   77        | ID ',' PASTEIN
   78        | %empty

   79 N: T_NL
   80  | %empty

   81 NUM: T_NUM

   82 BOOL: T_TRUE
   83     | T_FALSE

   84 STR: T_STR

   85 ID: T_ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 14 21 27 53 75
')' (41) 7 14 21 27 53 75
',' (44) 55 56 76 77
'<' (60)
'=' (61)
'>' (62)
'[' (91) 54
']' (93) 54
error (256) 9
T_LIBRARY (258)
T_NL (259) 7 8 9 14 17 19 22 24 27 29 33 35 36 79
T_PRINT (260) 7
T_WHILE (261) 14
T_IF (262) 21 27
T_BREAK (263) 19
T_REPEAT (264) 17
T_IN (265)
T_ELSE (266) 27 29
T_BY (267)
T_LENGTHOUT (268)
T_PASTEO (269) 75
T_TRUE (270) 82
T_FALSE (271) 83
T_MOD (272)
T_MMOD (273)
T_NUM (274) 81
T_STR (275) 84
T_ID (276) 85
T_COPEN (277)
T_SEQOPEN (278)
T_CO (279) 8 14 17 21 27 29
T_CC (280) 8 14 17 22 24 27 29
T_ADD (281) 42
T_SUB (282) 44
T_MUL (283) 47
T_DIV (284) 49
T_GT (285) 60
T_LT (286) 59
T_EQ (287) 65
T_AND (288) 68
T_OR (289) 69
T_LE (290) 62
T_GE (291) 63
T_EE (292) 61
T_NE (293) 64
T_RA (294) 67
T_LA (295) 66


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Q (50)
    on left: 1, on right: 0
S (51)
    on left: 2 3 4 5 6 7 8 9 10, on right: 1 2 3 4 5 6 7 8 9 14 17
    22 24 27 29
WHILE (52)
    on left: 14, on right: 2
$@1 (53)
    on left: 11, on right: 14
$@2 (54)
    on left: 12, on right: 14
$@3 (55)
    on left: 13, on right: 14
REPEAT (56)
    on left: 17, on right: 4
$@4 (57)
    on left: 15, on right: 17
$@5 (58)
    on left: 16, on right: 17
BREAK (59)
    on left: 19, on right: 5
$@6 (60)
    on left: 18, on right: 19
IF (61)
    on left: 21, on right: 3
$@7 (62)
    on left: 20, on right: 21
NIF (63)
    on left: 22 24, on right: 21
$@8 (64)
    on left: 23, on right: 24
E (65)
    on left: 27 29, on right: 24 30
$@9 (66)
    on left: 25, on right: 27
$@10 (67)
    on left: 26, on right: 27
$@11 (68)
    on left: 28, on right: 29
EIF (69)
    on left: 30 31, on right: 27
EXP (70)
    on left: 33 35 36, on right: 6
$@12 (71)
    on left: 32, on right: 33
$@13 (72)
    on left: 34, on right: 35
COND (73)
    on left: 37 38 39 40, on right: 14 21 27
K (74)
    on left: 42 44 45, on right: 33 35 36 37 38 39 40 42 44 53
@14 (75)
    on left: 41, on right: 42
@15 (76)
    on left: 43, on right: 44
L (77)
    on left: 47 49 50, on right: 42 44 45 47 49
@16 (78)
    on left: 46, on right: 47
@17 (79)
    on left: 48, on right: 49
O (80)
    on left: 51 52 53 54, on right: 47 49 50
INDEX (81)
    on left: 55 56 57 58, on right: 54 55 56
RELOP (82)
    on left: 59 60 61 62 63 64, on right: 33 37
ASSIGNOP (83)
    on left: 65 66 67, on right: 35 38
LOGICOP (84)
    on left: 68 69, on right: 39
ITEM (85)
    on left: 70 71 72 73 74, on right: 7
PASTE (86)
    on left: 75, on right: 73
PASTEIN (87)
    on left: 76 77 78, on right: 75 76 77
N (88)
    on left: 79 80, on right: 8 14 17 21 22 24 27 29
NUM (89)
    on left: 81, on right: 52 55 57 70
BOOL (90)
    on left: 82 83, on right: 71
STR (91)
    on left: 84, on right: 72 76
ID (92)
    on left: 85, on right: 35 38 51 54 56 58 74 77


State 0

    0 $accept: . Q $end

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    $end  reduce using rule 10 (S)

    Q       go to state 11
    S       go to state 12
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 1

    9 S: error . T_NL S

    T_NL  shift, and go to state 23


State 2

    7 S: T_PRINT . '(' ITEM ')' T_NL S

    '('  shift, and go to state 24


State 3

   14 WHILE: T_WHILE . N $@1 '(' N COND N ')' $@2 N T_CO N S T_CC $@3 T_NL

    T_NL  shift, and go to state 25

    $default  reduce using rule 80 (N)

    N  go to state 26


State 4

   21 IF: T_IF . N '(' N COND N ')' $@7 N T_CO NIF

    T_NL  shift, and go to state 25

    $default  reduce using rule 80 (N)

    N  go to state 27


State 5

   19 BREAK: T_BREAK . $@6 T_NL

    $default  reduce using rule 18 ($@6)

    $@6  go to state 28


State 6

   17 REPEAT: T_REPEAT . $@4 N T_CO N S T_CC $@5 T_NL

    $default  reduce using rule 15 ($@4)

    $@4  go to state 29


State 7

   81 NUM: T_NUM .

    $default  reduce using rule 81 (NUM)


State 8

   85 ID: T_ID .

    $default  reduce using rule 85 (ID)


State 9

    8 S: T_CO . N S T_CC T_NL S

    T_NL  shift, and go to state 25

    $default  reduce using rule 80 (N)

    N  go to state 30


State 10

   53 O: '(' . K ')'

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    K    go to state 31
    L    go to state 19
    O    go to state 20
    NUM  go to state 21
    ID   go to state 32


State 11

    0 $accept: Q . $end

    $end  shift, and go to state 33


State 12

    1 Q: S .

    $default  reduce using rule 1 (Q)


State 13

    2 S: WHILE . S

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S       go to state 34
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 14

    4 S: REPEAT . S

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S       go to state 35
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 15

    5 S: BREAK . S

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S       go to state 36
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 16

    3 S: IF . S

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S       go to state 37
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 17

    6 S: EXP . S

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S       go to state 38
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 18

   33 EXP: K . RELOP K $@12 T_NL
   36    | K . T_NL
   42 K: K . T_ADD @14 L
   44  | K . T_SUB @15 L

    T_NL   shift, and go to state 39
    T_ADD  shift, and go to state 40
    T_SUB  shift, and go to state 41
    T_GT   shift, and go to state 42
    T_LT   shift, and go to state 43
    T_LE   shift, and go to state 44
    T_GE   shift, and go to state 45
    T_EE   shift, and go to state 46
    T_NE   shift, and go to state 47

    RELOP  go to state 48


State 19

   45 K: L .
   47 L: L . T_MUL @16 O
   49  | L . T_DIV @17 O

    T_MUL  shift, and go to state 49
    T_DIV  shift, and go to state 50

    $default  reduce using rule 45 (K)


State 20

   50 L: O .

    $default  reduce using rule 50 (L)


State 21

   52 O: NUM .

    $default  reduce using rule 52 (O)


State 22

   35 EXP: ID . ASSIGNOP K $@13 T_NL
   51 O: ID .
   54  | ID . '[' INDEX ']'

    T_EQ  shift, and go to state 51
    T_RA  shift, and go to state 52
    T_LA  shift, and go to state 53
    '['   shift, and go to state 54

    $default  reduce using rule 51 (O)

    ASSIGNOP  go to state 55


State 23

    9 S: error T_NL . S

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S       go to state 56
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 24

    7 S: T_PRINT '(' . ITEM ')' T_NL S

    T_PASTEO  shift, and go to state 57
    T_TRUE    shift, and go to state 58
    T_FALSE   shift, and go to state 59
    T_NUM     shift, and go to state 7
    T_STR     shift, and go to state 60
    T_ID      shift, and go to state 8

    ITEM   go to state 61
    PASTE  go to state 62
    NUM    go to state 63
    BOOL   go to state 64
    STR    go to state 65
    ID     go to state 66


State 25

   79 N: T_NL .

    $default  reduce using rule 79 (N)


State 26

   14 WHILE: T_WHILE N . $@1 '(' N COND N ')' $@2 N T_CO N S T_CC $@3 T_NL

    $default  reduce using rule 11 ($@1)

    $@1  go to state 67


State 27

   21 IF: T_IF N . '(' N COND N ')' $@7 N T_CO NIF

    '('  shift, and go to state 68


State 28

   19 BREAK: T_BREAK $@6 . T_NL

    T_NL  shift, and go to state 69


State 29

   17 REPEAT: T_REPEAT $@4 . N T_CO N S T_CC $@5 T_NL

    T_NL  shift, and go to state 25

    $default  reduce using rule 80 (N)

    N  go to state 70


State 30

    8 S: T_CO N . S T_CC T_NL S

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    T_CC  reduce using rule 10 (S)

    S       go to state 71
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 31

   42 K: K . T_ADD @14 L
   44  | K . T_SUB @15 L
   53 O: '(' K . ')'

    T_ADD  shift, and go to state 40
    T_SUB  shift, and go to state 41
    ')'    shift, and go to state 72


State 32

   51 O: ID .
   54  | ID . '[' INDEX ']'

    '['  shift, and go to state 54

    $default  reduce using rule 51 (O)


State 33

    0 $accept: Q $end .

    $default  accept


State 34

    2 S: WHILE S .

    $default  reduce using rule 2 (S)


State 35

    4 S: REPEAT S .

    $default  reduce using rule 4 (S)


State 36

    5 S: BREAK S .

    $default  reduce using rule 5 (S)


State 37

    3 S: IF S .

    $default  reduce using rule 3 (S)


State 38

    6 S: EXP S .

    $default  reduce using rule 6 (S)


State 39

   36 EXP: K T_NL .

    $default  reduce using rule 36 (EXP)


State 40

   42 K: K T_ADD . @14 L

    $default  reduce using rule 41 (@14)

    @14  go to state 73


State 41

   44 K: K T_SUB . @15 L

    $default  reduce using rule 43 (@15)

    @15  go to state 74


State 42

   60 RELOP: T_GT .

    $default  reduce using rule 60 (RELOP)


State 43

   59 RELOP: T_LT .

    $default  reduce using rule 59 (RELOP)


State 44

   62 RELOP: T_LE .

    $default  reduce using rule 62 (RELOP)


State 45

   63 RELOP: T_GE .

    $default  reduce using rule 63 (RELOP)


State 46

   61 RELOP: T_EE .

    $default  reduce using rule 61 (RELOP)


State 47

   64 RELOP: T_NE .

    $default  reduce using rule 64 (RELOP)


State 48

   33 EXP: K RELOP . K $@12 T_NL

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    K    go to state 75
    L    go to state 19
    O    go to state 20
    NUM  go to state 21
    ID   go to state 32


State 49

   47 L: L T_MUL . @16 O

    $default  reduce using rule 46 (@16)

    @16  go to state 76


State 50

   49 L: L T_DIV . @17 O

    $default  reduce using rule 48 (@17)

    @17  go to state 77


State 51

   65 ASSIGNOP: T_EQ .

    $default  reduce using rule 65 (ASSIGNOP)


State 52

   67 ASSIGNOP: T_RA .

    $default  reduce using rule 67 (ASSIGNOP)


State 53

   66 ASSIGNOP: T_LA .

    $default  reduce using rule 66 (ASSIGNOP)


State 54

   54 O: ID '[' . INDEX ']'

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8

    INDEX  go to state 78
    NUM    go to state 79
    ID     go to state 80


State 55

   35 EXP: ID ASSIGNOP . K $@13 T_NL

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    K    go to state 81
    L    go to state 19
    O    go to state 20
    NUM  go to state 21
    ID   go to state 32


State 56

    9 S: error T_NL S .

    $default  reduce using rule 9 (S)


State 57

   75 PASTE: T_PASTEO . '(' PASTEIN ')'

    '('  shift, and go to state 82


State 58

   82 BOOL: T_TRUE .

    $default  reduce using rule 82 (BOOL)


State 59

   83 BOOL: T_FALSE .

    $default  reduce using rule 83 (BOOL)


State 60

   84 STR: T_STR .

    $default  reduce using rule 84 (STR)


State 61

    7 S: T_PRINT '(' ITEM . ')' T_NL S

    ')'  shift, and go to state 83


State 62

   73 ITEM: PASTE .

    $default  reduce using rule 73 (ITEM)


State 63

   70 ITEM: NUM .

    $default  reduce using rule 70 (ITEM)


State 64

   71 ITEM: BOOL .

    $default  reduce using rule 71 (ITEM)


State 65

   72 ITEM: STR .

    $default  reduce using rule 72 (ITEM)


State 66

   74 ITEM: ID .

    $default  reduce using rule 74 (ITEM)


State 67

   14 WHILE: T_WHILE N $@1 . '(' N COND N ')' $@2 N T_CO N S T_CC $@3 T_NL

    '('  shift, and go to state 84


State 68

   21 IF: T_IF N '(' . N COND N ')' $@7 N T_CO NIF

    T_NL  shift, and go to state 25

    $default  reduce using rule 80 (N)

    N  go to state 85


State 69

   19 BREAK: T_BREAK $@6 T_NL .

    $default  reduce using rule 19 (BREAK)


State 70

   17 REPEAT: T_REPEAT $@4 N . T_CO N S T_CC $@5 T_NL

    T_CO  shift, and go to state 86


State 71

    8 S: T_CO N S . T_CC T_NL S

    T_CC  shift, and go to state 87


State 72

   53 O: '(' K ')' .

    $default  reduce using rule 53 (O)


State 73

   42 K: K T_ADD @14 . L

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    L    go to state 88
    O    go to state 20
    NUM  go to state 21
    ID   go to state 32


State 74

   44 K: K T_SUB @15 . L

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    L    go to state 89
    O    go to state 20
    NUM  go to state 21
    ID   go to state 32


State 75

   33 EXP: K RELOP K . $@12 T_NL
   42 K: K . T_ADD @14 L
   44  | K . T_SUB @15 L

    T_ADD  shift, and go to state 40
    T_SUB  shift, and go to state 41

    $default  reduce using rule 32 ($@12)

    $@12  go to state 90


State 76

   47 L: L T_MUL @16 . O

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    O    go to state 91
    NUM  go to state 21
    ID   go to state 32


State 77

   49 L: L T_DIV @17 . O

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    O    go to state 92
    NUM  go to state 21
    ID   go to state 32


State 78

   54 O: ID '[' INDEX . ']'

    ']'  shift, and go to state 93


State 79

   55 INDEX: NUM . ',' INDEX
   57      | NUM .

    ','  shift, and go to state 94

    $default  reduce using rule 57 (INDEX)


State 80

   56 INDEX: ID . ',' INDEX
   58      | ID .

    ','  shift, and go to state 95

    $default  reduce using rule 58 (INDEX)


State 81

   35 EXP: ID ASSIGNOP K . $@13 T_NL
   42 K: K . T_ADD @14 L
   44  | K . T_SUB @15 L

    T_ADD  shift, and go to state 40
    T_SUB  shift, and go to state 41

    $default  reduce using rule 34 ($@13)

    $@13  go to state 96


State 82

   75 PASTE: T_PASTEO '(' . PASTEIN ')'

    T_STR  shift, and go to state 60
    T_ID   shift, and go to state 8

    $default  reduce using rule 78 (PASTEIN)

    PASTEIN  go to state 97
    STR      go to state 98
    ID       go to state 99


State 83

    7 S: T_PRINT '(' ITEM ')' . T_NL S

    T_NL  shift, and go to state 100


State 84

   14 WHILE: T_WHILE N $@1 '(' . N COND N ')' $@2 N T_CO N S T_CC $@3 T_NL

    T_NL  shift, and go to state 25

    $default  reduce using rule 80 (N)

    N  go to state 101


State 85

   21 IF: T_IF N '(' N . COND N ')' $@7 N T_CO NIF

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    COND  go to state 102
    K     go to state 103
    L     go to state 19
    O     go to state 20
    NUM   go to state 21
    ID    go to state 104


State 86

   17 REPEAT: T_REPEAT $@4 N T_CO . N S T_CC $@5 T_NL

    T_NL  shift, and go to state 25

    $default  reduce using rule 80 (N)

    N  go to state 105


State 87

    8 S: T_CO N S T_CC . T_NL S

    T_NL  shift, and go to state 106


State 88

   42 K: K T_ADD @14 L .
   47 L: L . T_MUL @16 O
   49  | L . T_DIV @17 O

    T_MUL  shift, and go to state 49
    T_DIV  shift, and go to state 50

    $default  reduce using rule 42 (K)


State 89

   44 K: K T_SUB @15 L .
   47 L: L . T_MUL @16 O
   49  | L . T_DIV @17 O

    T_MUL  shift, and go to state 49
    T_DIV  shift, and go to state 50

    $default  reduce using rule 44 (K)


State 90

   33 EXP: K RELOP K $@12 . T_NL

    T_NL  shift, and go to state 107


State 91

   47 L: L T_MUL @16 O .

    $default  reduce using rule 47 (L)


State 92

   49 L: L T_DIV @17 O .

    $default  reduce using rule 49 (L)


State 93

   54 O: ID '[' INDEX ']' .

    $default  reduce using rule 54 (O)


State 94

   55 INDEX: NUM ',' . INDEX

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8

    INDEX  go to state 108
    NUM    go to state 79
    ID     go to state 80


State 95

   56 INDEX: ID ',' . INDEX

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8

    INDEX  go to state 109
    NUM    go to state 79
    ID     go to state 80


State 96

   35 EXP: ID ASSIGNOP K $@13 . T_NL

    T_NL  shift, and go to state 110


State 97

   75 PASTE: T_PASTEO '(' PASTEIN . ')'

    ')'  shift, and go to state 111


State 98

   76 PASTEIN: STR . ',' PASTEIN

    ','  shift, and go to state 112


State 99

   77 PASTEIN: ID . ',' PASTEIN

    ','  shift, and go to state 113


State 100

    7 S: T_PRINT '(' ITEM ')' T_NL . S

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S       go to state 114
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 101

   14 WHILE: T_WHILE N $@1 '(' N . COND N ')' $@2 N T_CO N S T_CC $@3 T_NL

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    COND  go to state 115
    K     go to state 103
    L     go to state 19
    O     go to state 20
    NUM   go to state 21
    ID    go to state 104


State 102

   21 IF: T_IF N '(' N COND . N ')' $@7 N T_CO NIF

    T_NL  shift, and go to state 25

    $default  reduce using rule 80 (N)

    N  go to state 116


State 103

   37 COND: K . RELOP K
   39     | K . LOGICOP K
   40     | K .
   42 K: K . T_ADD @14 L
   44  | K . T_SUB @15 L

    T_ADD  shift, and go to state 40
    T_SUB  shift, and go to state 41
    T_GT   shift, and go to state 42
    T_LT   shift, and go to state 43
    T_AND  shift, and go to state 117
    T_OR   shift, and go to state 118
    T_LE   shift, and go to state 44
    T_GE   shift, and go to state 45
    T_EE   shift, and go to state 46
    T_NE   shift, and go to state 47

    $default  reduce using rule 40 (COND)

    RELOP    go to state 119
    LOGICOP  go to state 120


State 104

   38 COND: ID . ASSIGNOP K
   51 O: ID .
   54  | ID . '[' INDEX ']'

    T_EQ  shift, and go to state 51
    T_RA  shift, and go to state 52
    T_LA  shift, and go to state 53
    '['   shift, and go to state 54

    $default  reduce using rule 51 (O)

    ASSIGNOP  go to state 121


State 105

   17 REPEAT: T_REPEAT $@4 N T_CO N . S T_CC $@5 T_NL

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    T_CC  reduce using rule 10 (S)

    S       go to state 122
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 106

    8 S: T_CO N S T_CC T_NL . S

    error     shift, and go to state 1
    T_PRINT   shift, and go to state 2
    T_WHILE   shift, and go to state 3
    T_IF      shift, and go to state 4
    T_BREAK   shift, and go to state 5
    T_REPEAT  shift, and go to state 6
    T_NUM     shift, and go to state 7
    T_ID      shift, and go to state 8
    T_CO      shift, and go to state 9
    '('       shift, and go to state 10

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S       go to state 123
    WHILE   go to state 13
    REPEAT  go to state 14
    BREAK   go to state 15
    IF      go to state 16
    EXP     go to state 17
    K       go to state 18
    L       go to state 19
    O       go to state 20
    NUM     go to state 21
    ID      go to state 22


State 107

   33 EXP: K RELOP K $@12 T_NL .

    $default  reduce using rule 33 (EXP)


State 108

   55 INDEX: NUM ',' INDEX .

    $default  reduce using rule 55 (INDEX)


State 109

   56 INDEX: ID ',' INDEX .

    $default  reduce using rule 56 (INDEX)


State 110

   35 EXP: ID ASSIGNOP K $@13 T_NL .

    $default  reduce using rule 35 (EXP)


State 111

   75 PASTE: T_PASTEO '(' PASTEIN ')' .

    $default  reduce using rule 75 (PASTE)


State 112

   76 PASTEIN: STR ',' . PASTEIN

    T_STR  shift, and go to state 60
    T_ID   shift, and go to state 8

    $default  reduce using rule 78 (PASTEIN)

    PASTEIN  go to state 124
    STR      go to state 98
    ID       go to state 99


State 113

   77 PASTEIN: ID ',' . PASTEIN

    T_STR  shift, and go to state 60
    T_ID   shift, and go to state 8

    $default  reduce using rule 78 (PASTEIN)

    PASTEIN  go to state 125
    STR      go to state 98
    ID       go to state 99


State 114

    7 S: T_PRINT '(' ITEM ')' T_NL S .

    $default  reduce using rule 7 (S)


State 115

   14 WHILE: T_WHILE N $@1 '(' N COND . N ')' $@2 N T_CO N S T_CC $@3 T_NL

    T_NL  shift, and go to state 25

    $default  reduce using rule 80 (N)

    N  go to state 126


State 116

   21 IF: T_IF N '(' N COND N . ')' $@7 N T_CO NIF

    ')'  shift, and go to state 127


State 117

   68 LOGICOP: T_AND .

    $default  reduce using rule 68 (LOGICOP)


State 118

   69 LOGICOP: T_OR .

    $default  reduce using rule 69 (LOGICOP)


State 119

   37 COND: K RELOP . K

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    K    go to state 128
    L    go to state 19
    O    go to state 20
    NUM  go to state 21
    ID   go to state 32


State 120

   39 COND: K LOGICOP . K

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    K    go to state 129
    L    go to state 19
    O    go to state 20
    NUM  go to state 21
    ID   go to state 32


State 121

   38 COND: ID ASSIGNOP . K

    T_NUM  shift, and go to state 7
    T_ID   shift, and go to state 8
    '('    shift, and go to state 10

    K    go to state 130
    L    go to state 19
    O    go to state 20
    NUM  go to state 21
    ID   go to state 32


State 122

   17 REPEAT: T_REPEAT $@4 N T_CO N S . T_CC $@5 T_NL

    T_CC  shift, and go to state 131


State 123

    8 S: T_CO N S T_CC T_NL S .

    $default  reduce using rule 8 (S)


State 124

   76 PASTEIN: STR ',' PASTEIN .

    $default  reduce using rule 76 (PASTEIN)


State 125

   77 PASTEIN: ID ',' PASTEIN .

    $default  reduce using rule 77 (PASTEIN)


State 126
